--- a/sha1passApp/build.gradle
+++ b/sha1passApp/build.gradle
@@ -18,7 +18,7 @@ android {
 
     defaultConfig {
         applicationId "com.rkarp.sha1pass.android"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -34,4 +34,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
 }
