--- a/sha1passApp/build.gradle
+++ b/sha1passApp/build.gradle
@@ -13,15 +13,18 @@ repositories {
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 27
+
+    def applicationBaseId = "com.example.sebastian.projektapp"
+    def versionBaseName = "1.0"
 
     defaultConfig {
-        applicationId "com.rkarp.sha1pass.android"
-        minSdkVersion 21
-        targetSdkVersion 22
+        applicationId "${applicationBaseId}p"
+        minSdkVersion 14
+        targetSdkVersion 27
         versionCode 1
-        versionName "1.50"
+        versionName "${versionBaseName}"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -33,8 +36,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.android.support:support-v4:22.0.0'
-    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:cardview-v7:25.0.1'
 }
