--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .gradle
+.idea/
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -7,3 +8,7 @@
 /captures
 
 .iml
+sha1passApp.iml
+src/androidTest/
+src/main/res/drawable-xhdpi/
+src/main/res/drawable-xxhdpi/
