--- a/sha1passApp/build.gradle
+++ b/sha1passApp/build.gradle
@@ -15,7 +15,7 @@ repositories {
 android {
     compileSdkVersion 27
 
-    def applicationBaseId = "com.example.sebastian.projektapp"
+    def applicationBaseId = "com.rkarp.sha1pass.android"
     def versionBaseName = "1.0"
 
     defaultConfig {
@@ -36,8 +36,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.android.support:support-v4:25.0.1'
-    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:design:27.0.2'
+    compile 'com.android.support:support-v4:27.0.2'
+    compile 'com.android.support:cardview-v7:27.0.2'
 }
