--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "module-base"]
 	path = module-base
-	url = git@gitlab.com:rickie.karp/module-base.git
+	url = git@192.168.2.200:module-base.git
