--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 group 'com.rkarp.appbox'
 
 buildscript {
-    ext {
-        kotlin_version = '1.2.51'
-    }
+    apply from: 'module-base/properties.gradle'
 
     repositories {
         mavenCentral()
@@ -12,7 +10,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.1"
     }
 }
@@ -26,7 +24,7 @@ allprojects {
         mavenCentral()
     }
     dependencies {
-        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+        compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
 
