--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
     }
     dependencies {
         compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-        testCompile group: 'junit', name: 'junit', version: '4.12'
+        testCompile group: 'junit', name: 'junit', version: junit4Version
     }
 
     compileJava {
