--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 //import com.github.spotbugs.SpotBugsTask
 
 buildscript {
-    apply from: 'module-base/properties.gradle'
+    apply from: 'module-base/base.gradle'
 
     repositories {
         mavenCentral()
