Update module-base file name

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    apply from: 'module-base/properties.gradle'
+    apply from: 'module-base/base.gradle'
 
     repositories {
         mavenCentral()
