--- a/AppCore/build.gradle
+++ b/AppCore/build.gradle
@@ -1,6 +1,30 @@
+plugins {
+    id "org.gradle.java.experimental-jigsaw" version "0.1.1"
+}
+
 group 'com.rkarp.appcore'
 
+javaModule.name = "rkarp.appcore"
+
 def minorVersion = 0
+
+project.ext {
+    okhttpVersion = '3.9.0'
+    jsonVersion = '20170516'
+    jacksonVersion = '2.9.0'
+}
+
+dependencies {
+    compile "org.openjfx:javafx-controls:11:linux"
+    compile "org.openjfx:javafx-graphics:11:linux"
+    compile "org.openjfx:javafx-base:11:linux"
+    
+    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+//        compile group: 'com.squareup.okhttp3', name: 'okhttp', version: project.ext.okhttpVersion
+    compile group: 'org.json', name: 'json', version: project.ext.jsonVersion
+    compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile group: 'com.fasterxml.jackson.net.rickiekarp.core', name: 'jackson-databind', version: project.ext.jacksonVersion
+}
 
 
 compileKotlin {
