Update gradle to version 5. Removed deprecated wrapper task

--- a/build.gradle
+++ b/build.gradle
@@ -82,6 +82,6 @@ sourceSets {
     }
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = gradleWrapper
+wrapper {
+    gradleVersion = gradleWrapperVersion
 }
