Update gradle wrapper and vaadin version

--- a/AdminServer/AdminServerWebapp/build.gradle
+++ b/AdminServer/AdminServerWebapp/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:$project.ext.springBootVersion"
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:$project.ext.springBootVersion" as Object
     }
 }
 
