--- a/HomeServer/src/main/resources/application.yml
+++ b/HomeServer/src/main/resources/application.yml
@@ -18,13 +18,13 @@ logging:
     org.hibernate: INFO
 
 db:
-  driver: org.postgresql.Driver
-  url: jdbc:postgresql://localhost:5432/data_home
-  username: postgres
+  driver: com.mysql.jdbc.Driver
+  url: jdbc:mysql://localhost:3306/data_home
+  username: root
   password: root
 
 hibernate:
-  dialect: org.hibernate.dialect.PostgreSQL92Dialect
+  dialect: org.hibernate.dialect.MySQLDialect
   show_sql: true
   hbm2ddl.auto: update
 
