Update mysql docker version

--- a/HomeServer/src/main/resources/application.yml
+++ b/HomeServer/src/main/resources/application.yml
@@ -19,7 +19,7 @@ logging:
 
 db:
   driver: com.mysql.jdbc.Driver
-  url: jdbc:mysql://localhost:3306/data_home
+  url: jdbc:mysql://database:3306/data_home
   username: root
   password: root
 
