--- a/HomeServer/src/main/resources/application.yml
+++ b/HomeServer/src/main/resources/application.yml
@@ -18,7 +18,7 @@ logging:
     org.hibernate: INFO
 
 db:
-  driver: com.mysql.jdbc.Driver
+  driver: com.mysql.cj.jdbc.Driver
   url: jdbc:mysql://database:3306/data_home
   username: root
   password: root
