--- a/Foundation/build.gradle
+++ b/Foundation/build.gradle
@@ -6,5 +6,8 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: project.ext.gsonVersion
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: project.ext.jacksonVersion
 
-    compile group: 'org.apache.commons', name: 'commons-text', version: '1.3'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
+    compile group: 'org.flywaydb', name: 'flyway-core', version: project.ext.flywayVersion
+
+    compile group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 }
