--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     container_name: database
     build: service-database
     environment:
-      - MYSQL_USER=postgres
-      - MYSQL_PASSWORD=postgres
       - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_USER=user
+      - MYSQL_PASSWORD=1f3BcE47Fa91c4fe7df4
     ports:
       - "3306:3306"
