--- a/Deployment/service-application/Dockerfile
+++ b/Deployment/service-application/Dockerfile
@@ -3,6 +3,8 @@ FROM tomcat:9.0.12-jre11
 ADD tomcat-users.xml /usr/local/tomcat/conf/
 ADD context.xml /usr/local/tomcat/webapps/manager/META-INF/context.xml
 
+COPY setup /usr/local/tomcat/
+
 COPY webapps/*.war /tmp/
 RUN \
     echo "deploy webapps"; \
