--- a/base.gradle
+++ b/base.gradle
@@ -1,6 +1,6 @@
 ext {
     gradleWrapper = '4.10.2'
-    gradleWrapperVersion = '5.0-milestone-1'
+    gradleVersion = '5.0'
 
     kotlinVersion = '1.3.10'
     dokkaVersion = '0.9.17'
