--- a/AdminServer/AdminServerBackend/build.gradle
+++ b/AdminServer/AdminServerBackend/build.gradle
@@ -21,22 +21,24 @@ buildscript {
 
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'java'
 apply plugin: 'war'
 
 //------------------------------------------------------------------------------------------------------------------------
 //    Plugins - Configuration
 //------------------------------------------------------------------------------------------------------------------------
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
-war {
-    baseName = 'spring5_angular4_demo'
+bootWar {
+    baseName = 'AdminPanel'
+    libsDirName = new File(projectDir, "/../../module-deployment/service-application/webapps")
     version =  '1.0'
     manifest {
         attributes 'Main-Class': 'net.rickiekarp.admin.AngularBootApplication'
+        attributes 'Implementation-Version': new Date().format('yyMMddHHmm')
     }
+    archiveName baseName + ".war"
 }
 
 
