--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,10 @@ include 'LoginServer'
 
 include 'AdminServerBackend'
 project(':AdminServerBackend').projectDir = "$rootDir/AdminServer/AdminServerBackend" as File
-
 include 'AdminServerFrontend'
 project(':AdminServerFrontend').projectDir = "$rootDir/AdminServer/AdminServerFrontend" as File
+
+include 'WebsiteBackend'
+project(':WebsiteBackend').projectDir = "$rootDir/Website/WebsiteBackend" as File
+include 'WebsiteFrontend'
+project(':WebsiteFrontend').projectDir = "$rootDir/Website/WebsiteFrontend" as File
