--- a/Website/WebsiteFrontend/build.gradle
+++ b/Website/WebsiteFrontend/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        gradleNodeVersion = '1.2.0'
+        gradleNodeVersion = '1.3.0'
     }
 
     repositories {
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath "com.moowork.gradle:gradle-node-plugin:$gradleNodeVersion"
+        classpath "com.github.node-gradle:gradle-node-plugin:$gradleNodeVersion"
     }
 }
 
@@ -19,15 +19,15 @@ buildscript {
 //    Plugins - Application
 //------------------------------------------------------------------------------------------------------------------------
 
-apply plugin: 'com.moowork.node'
+apply plugin: 'com.github.node-gradle.node'
 
 //------------------------------------------------------------------------------------------------------------------------
 //    Plugin configuration
 //------------------------------------------------------------------------------------------------------------------------
 
 node {
-    version = '8.5.0'
-    npmVersion = '5.4.2'
+    version = '9.11.2'
+    npmVersion = '6.8.0'
     download = true
     workDir = file("${rootDir}/Website/WebsiteFrontend/node")
     nodeModulesDir = file("${rootDir}/Website/WebsiteFrontend")
