--- a/Website/WebsiteFrontend/package.json
+++ b/Website/WebsiteFrontend/package.json
@@ -8,33 +8,34 @@
     "buildProd": "ng build --prod",
     "buildStandalone": "ng build",
     "serveStandaloneWatch": "ng serve --proxy-config proxy-dev.json --watch=true",
-    "buildToSpring": "ng build --prod --op=../WebsiteBackend/src/main/resources/static --base-href=/Website/",
+    "buildToSpring": "ng build --prod --output-path=../WebsiteBackend/src/main/resources/static --base-href=/Website/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.7",
-    "@angular/common": "^4.4.7",
-    "@angular/compiler": "^4.4.7",
-    "@angular/core": "^4.4.7",
-    "@angular/forms": "^4.4.7",
-    "@angular/http": "^4.4.7",
-    "@angular/platform-browser": "^4.4.7",
-    "@angular/platform-browser-dynamic": "^4.4.7",
-    "@angular/router": "^4.4.7",
-    "core-js": "^2.6.2",
-    "rxjs": "^5.5.12",
-    "zone.js": "^0.8.27"
+    "@angular/animations": "^6.1.10",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
+    "@angular/http": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/router": "^6.1.10",
+    "core-js": "^2.6.5",
+    "rxjs": "^6.4.0",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "1.4.2",
-    "@angular/compiler-cli": "^4.4.7",
-    "@angular/language-service": "^4.4.7",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "6.1.1",
+    "@angular/compiler-cli": "^6.1.1",
+    "@angular/language-service": "^6.1.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^6.14.2",
+    "@types/node": "^6.14.3",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -47,6 +48,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "2.9.1"
   }
 }
