--- a/LoginServer/build.gradle
+++ b/LoginServer/build.gradle
@@ -1,10 +1,12 @@
 group 'net.rickiekarp.loginserver'
 
+buildscript {
+    apply from: '../module-base/base.gradle.kts'
+}
+
 dependencies {
     compile project(':Foundation')
-
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: project.ext.springBootVersion
-
 }
 
 apply plugin: 'war'
