--- a/redditApp/src/main/AndroidManifest.xml
+++ b/redditApp/src/main/AndroidManifest.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.rkarp.reddit"
-      
-      android:versionCode="1"
-      android:versionName="1.0.2"
-      >
+      package="com.rkarp.reddit">
 
     <uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,8 +9,6 @@
 	<uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS" />
 	
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="19" />
-
     <supports-screens />
     
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".RedditIsFunApplication">
