HomeServer: Fix manifest attribute

--- a/HomeServer/build.gradle
+++ b/HomeServer/build.gradle
@@ -14,7 +14,7 @@ build {
     war {
         libsDirName = new File(projectDir, "/../module-deployment/service-application/webapps")
         manifest {
-            attributes 'Build-Time': new Date().format('yyMMddHHmm')
+            attributes 'Implementation-Version': new Date().format('yyMMddHHmm')
         }
         archiveName 'HomeServer.war'
     }
