LoginServer: Add freemarker mail templates

--- a/LoginServer/build.gradle
+++ b/LoginServer/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 dependencies {
     compile project(':Foundation')
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: project.ext.springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: project.ext.springBootVersion
 }
 
 apply plugin: 'war'
