Update deprecated build calls

--- a/HomeServer/build.gradle
+++ b/HomeServer/build.gradle
@@ -11,10 +11,10 @@ dependencies {
 apply plugin: 'war'
 build {
     war {
+        archivesBaseName = 'HomeServer'
         libsDirName = new File(projectDir, "/../module-deployment/service-application/webapps")
         manifest {
             attributes 'Implementation-Version': new Date().format('yyMMddHHmm')
         }
-        archiveName 'HomeServer.war'
     }
 }
