Move EmailService to Foundation

--- a/Foundation/build.gradle
+++ b/Foundation/build.gradle
@@ -10,6 +10,10 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: project.ext.springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: project.ext.springBootVersion
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: project.ext.springBootVersion
+
+    //mail
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: project.ext.springBootVersion
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: project.ext.springBootVersion
     
     //redis
     compile group: 'org.springframework.data', name: 'spring-data-redis', version: project.ext.springBootVersion
