--- a/redditApp/src/main/AndroidManifest.xml
+++ b/redditApp/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
     <supports-screens />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".RedditIsFunApplication">
+
+		<uses-library android:name="org.apache.http.legacy" android:required="false"/>
+
         <activity android:name=".threads.ThreadsListActivity"
                   android:label="@string/app_name">
             <intent-filter>
