--- a/homeassistantApp/build.gradle
+++ b/homeassistantApp/build.gradle
@@ -56,7 +56,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation 'com.google.protobuf:protobuf-lite:3.0.0'
+    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
+
+    protobuf 'com.google.protobuf:protobuf-java:3.7.1'
 }
 
 protobuf {
