--- a/homeassistantApp/src/main/AndroidManifest.xml
+++ b/homeassistantApp/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
 
-        <activity android:name="net.rickiekarp.homeassistant.MainActivity"
+        <activity android:name="net.rickiekarp.homeassistant.ui.MainActivity"
                   android:screenOrientation="portrait">
         </activity>
-        <activity android:name="net.rickiekarp.homeassistant.LoginActivity"
+        <activity android:name="net.rickiekarp.homeassistant.ui.LoginActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
